--- a/src/app/components/challenges/challenges.component.html
+++ b/src/app/components/challenges/challenges.component.html
@@ -1,6 +1,6 @@
 <div class="w-full flex justify-center mt-20">
   <div class="w-full max-w-6xl px-4 xl:w-[60%]">
-    <!-- Botón para mostrar el popup de nuevo desafío -->
+    <!-- Prueba de botón para mostrar el popup de nuevo desafío -->
     <div class="flex justify-center py-4 w-full">
       <button
         (click)="togglePopup()"
