--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -113,6 +113,12 @@
         >
           <span class="truncate">{{ "header.challenges" | translate }}</span>
         </button>
+        <div
+          *ngIf="isLoggedIn"
+          class="flex items-center gap-2 px-4 text-white text-sm font-bold"
+        >
+          ⭐ {{ points }} puntos
+        </div>
         <button
           *ngIf="!isLoggedIn"
           class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#1980e6] text-white text-sm font-bold leading-normal tracking-[0.015em]"
@@ -137,7 +143,6 @@
           />
         </button>
       </div>
-
     </header>
 
     <!-- Sidebar (Menú lateral) -->
@@ -149,7 +154,7 @@
         'translate-x-full': !isMenuOpen
       }"
     >
-      <div class="p-4 flex flex-col space-y-4 flex gap-2 sm:gap-4">
+      <div class="p-4 flex flex-col space-y-4 gap-2 sm:gap-4">
         <!-- Botón para cerrar el menú -->
         <button
           class="self-end text-gray-400 hover:text-white text-2xl transform transition-transform duration-150 ease-in-out active:scale-90"
@@ -232,6 +237,12 @@
         >
           <span class="truncate">{{ "header.signIn" | translate }}</span>
         </button>
+        <div
+          *ngIf="isLoggedIn"
+          class="flex items-center gap-2 px-4 text-white text-sm font-bold"
+        >
+          ⭐ {{ points }} puntos
+        </div>
         <button
           *ngIf="isLoggedIn"
           (click)="logout()"
