--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <header
       class="fixed top-0 left-0 w-full flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#293038] px-6 py-3 bg-gray-800 z-50"
     >
-      <!-- Logo (Se ajusta según el tamaño de pantalla) -->
+      <!-- Logo -->
       <button (click)="navigateToHome()">
         <div
           class="flex items-center gap-4 text-xl md:text-2xl lg:text-3xl xl:text-4xl pt-1"
@@ -52,7 +52,7 @@
             class="bg-gray-800 text-white p-2 rounded-lg flex items-center space-x-2 w-12 h-12 pt-1"
             (click)="toggleDropdown()"
           >
-            <!-- Mostrar la bandera seleccionada o un icono por defecto -->
+            <!-- Idioma -->
             <img
               *ngIf="selectedLanguage"
               [src]="selectedLanguage.flag"
@@ -67,7 +67,7 @@
             />
           </button>
 
-          <!-- Menú desplegable -->
+          <!-- Menú desplegable para el cambio de idioma -->
           <div
             *ngIf="dropdownOpen"
             class="absolute left-0 mt-2 bg-gray-800 text-white rounded-lg w-12"
@@ -93,6 +93,8 @@
         >
           <span class="truncate">{{ "header.home" | translate }}</span>
         </button>
+
+        <!-- Navegación a catálogo -->
         <button
           class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 text-white text-sm font-bold leading-normal tracking-[0.015em]"
           [ngClass]="{
@@ -103,6 +105,7 @@
         >
           <span class="truncate">{{ "header.catalog" | translate }}</span>
         </button>
+        <!-- Navegación a desafíos -->
         <button
           (click)="navigateToChallenges()"
           class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 text-white text-sm font-bold leading-normal tracking-[0.015em]"
@@ -113,12 +116,16 @@
         >
           <span class="truncate">{{ "header.challenges" | translate }}</span>
         </button>
+
+        <!-- Puntuación si está logeado -->
         <div
           *ngIf="isLoggedIn"
           class="flex items-center gap-2 px-4 text-white text-sm font-bold"
         >
           ⭐ {{ points }} puntos
         </div>
+
+        <!-- Registro/Inicio de sesión -->
         <button
           *ngIf="!isLoggedIn"
           class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#1980e6] text-white text-sm font-bold leading-normal tracking-[0.015em]"
@@ -133,6 +140,7 @@
         >
           <span class="truncate">{{ "login.log_out" | translate }}</span>
         </button>
+
         <!-- Imagen de perfil -->
         <button class="hidden md:flex">
           <img
@@ -145,7 +153,7 @@
       </div>
     </header>
 
-    <!-- Sidebar (Menú lateral) -->
+    <!-- Sidebar -->
     <div
       id="sidebar-menu"
       class="sidebar-menu fixed top-0 right-0 h-full w-64 bg-gray-900 text-white transform transition-transform duration-300 ease-in-out z-50 border-l-2 border-gray-300"
@@ -163,7 +171,7 @@
           ❌
         </button>
         <div class="flex items-center justify-between w-full gap-4">
-          <!-- 🌍 Selector de idioma (Izquierda) -->
+          <!-- Selector de idioma -->
           <div class="relative inline-block">
             <button
               class="bg-gray-800 p-2 rounded-lg flex items-center w-12 h-12"
@@ -196,7 +204,7 @@
             </div>
           </div>
 
-          <!-- 📸 Imagen de perfil (Derecha) -->
+          <!-- Imagen de perfil -->
           <button class="flex items-center justify-center ml-auto">
             <img
               [src]="profileImageUrl"
