--- a/src/app/components/challenges/challenges.component.css
+++ b/src/app/components/challenges/challenges.component.css
@@ -13,11 +13,11 @@
   
  /* Oculta la barra de scroll pero mantiene el desplazamiento */
 .no-scrollbar {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none;  /* IE 10+ */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 .no-scrollbar::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Edge */
+  display: none;
 } 
 .line-clamp-2 {
   display: -webkit-box;
