--- a/src/app/components/course-detail/course-detail.component.html
+++ b/src/app/components/course-detail/course-detail.component.html
@@ -16,6 +16,7 @@
           <p class="text-gray-600 dark:text-gray-300">
             {{'course_page.unlock_skills' | translate}}
           </p>
+          <!-- Botón para acceder al nivel -->
           <div class="text-right mt-4">
             <button 
               (click)="goToLevel(level)" 
