--- a/src/app/components/python-level-1/python-level-1.component.html
+++ b/src/app/components/python-level-1/python-level-1.component.html
@@ -1,21 +1,27 @@
 <div
   class="flex flex-col items-center justify-center min-h-screen bg-grey-700 text-center p-8 pt-24"
 >
+  <!-- Título -->
   <h1 class="text-5xl font-extrabold text-white mb-4">
     {{ 'python_level1.title' | translate }}
   </h1>
+  <!-- Descripción -->
   <p class="text-xl text-white mb-6">
     {{ 'python_level1.intro' | translate }}
   </p>
-
+  
+  <!-- Cajita de pregunta -->
   <div class="bg-white p-6 rounded-lg shadow-xl w-full max-w-xl mx-auto">
+    <!-- Pregunta -->
     <h2 class="text-3xl font-bold text-gray-800 mb-4">
       {{ 'python_level1.question_title' | translate }}
     </h2>
+    <!-- Explicación pregunta -->
     <p class="text-lg text-gray-700 mb-4">
       {{ 'python_level1.question_text' | translate }}
     </p>
 
+    <!-- Opciones con método checkear opcion correcta -->
     <div class="flex flex-col gap-4 mb-6">
       <button
         (click)="checkAnswer('option1')"
@@ -41,6 +47,7 @@
       {{ feedbackMessage }}
     </p>
 
+    <!-- Si se ha acertado botón siguiente nivel -->
     <button
       *ngIf="feedbackMessage.includes('Correct')" 
       (click)="goToNextLevel()"
