--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,4 +1,3 @@
-<!-- SETTINGS CONTAINER -->
 <div
   class="mx-auto mt-28 bg-gray-800 p-7 rounded-xl"
   [ngClass]="{
@@ -6,18 +5,19 @@
     'w-[70%]': screenSize === 'xl' || screenSize === '2xl'
   }"
 >
+  <!-- Título -->
   <h2 class="text-2xl font-semibold text-white mb-8">
     {{ "settings.title" | translate }}
   </h2>
 
-  <!-- Account Section -->
+  <!-- Sección de cuenta -->
   <div class="text-white bg-gray-900 rounded-xl">
     <div class="text-white mb-10 bg-gray-900 pr-10 pl-10 pb-2 pt-2 rounded-xl">
       <h3 class="font-semibold mb-4">
         {{ "settings2.account.title" | translate }}
       </h3>
 
-      <!-- Sección de Correo Electrónico -->
+      <!-- Mostrar correo del usuario con botón para cambiarlo -->
       <div class="flex justify-between items-center mb-4">
         <div>
           <p class="text-sm text-gray-400">
@@ -33,7 +33,7 @@
         </button>
       </div>
 
-      <!-- Sección de Contraseña -->
+      <!-- Mostrar contraseña con botón para cambiarla -->
       <div class="flex justify-between items-center mb-4">
         <div>
           <p class="text-sm text-gray-400">
@@ -49,7 +49,7 @@
         </button>
       </div>
 
-      <!-- Sección de Autenticación de Dos Factores -->
+      <!-- Toggle para activar/desactivar autenticación de dos factores -->
       <div class="flex justify-between items-center mb-4">
         <p>{{ "settings.account.two_factor_auth" | translate }}</p>
         <label class="inline-flex items-center cursor-pointer">
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <!-- Modal para Cambiar Correo Electrónico -->
+    <!-- Modal para cambiar correo electrónico -->
     <div
       *ngIf="showEmailModal"
       class="fixed inset-0 flex justify-center items-center bg-black bg-opacity-50 z-50"
@@ -100,13 +100,13 @@
     </div>
   </div>
 
-  <!-- Profile Section -->
+  <!-- Sección de perfil -->
   <div class="text-white mb-10 bg-gray-900 pr-10 pl-10 pb-2 pt-2 rounded-xl">
     <h3 class="font-semibold mb-4">
       {{ "settings.profile.title" | translate }}
     </h3>
 
-    <!-- Profile Name Section -->
+    <!-- Mostrar nombre completo con botón para cambiarlo -->
     <div class="flex justify-between items-center mb-4">
       <div>
         <p class="text-sm text-gray-400">
@@ -122,7 +122,7 @@
       </button>
     </div>
 
-    <!-- Personal Domain Section -->
+    <!-- Botón para reclamar dominio personal -->
     <div class="flex justify-between items-center mb-4">
       <p>{{ "settings.profile.personal_domain" | translate }}</p>
       <button class="bg-gray-700 text-white px-4 py-1 rounded">
@@ -131,7 +131,7 @@
     </div>
   </div>
 
-  <!-- Public Profile Section -->
+  <!-- Sección del perfil público -->
   <div class="text-white mb-10 bg-gray-900 pr-10 pl-10 pb-5 pt-2 rounded-xl">
     <h3 class="font-semibold mb-4">
       {{ "settings.public_profile.title" | translate }}
@@ -150,6 +150,7 @@
         ></div>
       </label>
     </div>
+    <!-- Botón para cambiar el avatar -->
     <button
       (click)="showPopup = true"
       class="bg-red-600 text-white px-6 py-2 rounded hover:bg-red-700 transition"
@@ -158,7 +159,7 @@
     </button>
   </div>
 
-  <!-- Popup Modal for Changing Name -->
+  <!-- Modal para cambiar nombre -->
   <div
     *ngIf="showNameModal"
     class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50 text-black"
@@ -196,7 +197,7 @@
     </div>
   </div>
 
-  <!-- CHANGE PASSWORD MODAL -->
+  <!-- Modal para cambiar la contraseña -->
   <div
     *ngIf="showPasswordModal"
     class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50"
@@ -252,7 +253,7 @@
     </div>
   </div>
 
-  <!-- AVATAR PICKER POPUP -->
+  <!-- Avatar -->
   <div
     *ngIf="showPopup"
     class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50"
